- Added translations, replaced string constants, added IconButtons - Fixed unused Imports in CircuitDetailsActivity which caused crashes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -171,6 +171,9 @@ roles = Rollen
 topicsAndSpec = Themen & Spezifikation*
 roleScriptTemplate = Rollenskriptvorlage
 students = Studenten
+warningValidValue = Bitte einen g\u00FCltigen Wert eingeben!
+warningEnterYear = Bitte ein Jahr eingeben!
+warningEnterSemester = Bitte ein Semester eingeben!
 
 #Exams
 exams = Pr\u00FCfungen
@@ -197,8 +200,8 @@ importObjective = Lernziel importieren
 addQuestion = Frage hinzuf\u00FCgen
 editQuestion = Frage bearbeiten
 
-
 spImageUpload= Bild erfolgreich hochgeladen!
+errorFileUpload = Fehler beim Hochladen!
 
 ######################### - ROLE - #########################
 
@@ -207,28 +210,34 @@ spImageUpload= Bild erfolgreich hochgeladen!
 #RoleView
 previousRole = Vorherige Rolle*
 homeRole = Home*
+
 #FilterPanel
 roleComplexity = Complexity*
+
 #RoleEditView
 addRole = Rolle hinzuf\u00FCgen*
 editRole = Rolle bearbeiten*
 newRole = Neue Rolle*
 roleActive = Active*
+
 #RoleDetailsView/RoleDetail
 roleDetail = Rollendetails*
 roleName = Rollenbezeichnung*
 roleAcronym = Abk\u00FCrzung*
-roleType = Rollentyp*f
+roleType = Rollentyp*
+
 #RoleDetailsView/RoleParticipants
 roleParticipants = Rollenbeteiligte*
 author = Autor*
 reviewer = Revisor*
 addAuthor = Autor hinzuf\u00FCgen*
 addReviewer = Revisor hinzuf\u00FCgen*
+
 #RoleDetailsView/Keyword
 keyword = Schl\u00FCsselwort
 keywords=Schl\u00FCsselw\u00F6rter*
 addKeyword = Schl\u00FCsselwort hinzuf\u00FCgen*
+
 #RoleDetailsView/Learning
 learning = Learning*
 majorBtnLbl = Add major*
@@ -237,43 +246,68 @@ mainClassi = Main Classification*
 classiTopic = Classification Topic*
 topicLbl = Topic*
 skillLevel = Skill Level*
+
 #CheckListSubView/CheckList/AddCkeckListTopic
 checkList = Checkliste*
 addCheckListTopic = Checklistengruppe hinzuf\u00FCgen*
 addCheckListQuestion = Frage hinzuf\u00FCgen*
 topicDescription = Description*
 checklistTopic = Topic*
+
 #CheckListSubView/CheckList/ImportTopic
 importTopic= Import Topic*
 roleQuestions = Fragen
+
+#RoleDetailsChecklistSubViewChecklistTopic/OptionItemView
+roleImportQuestion = Frage importieren
+roleOptionName = Option:*
+roleOptionValue = Wert:*
+roleQuestionName = Frage*
+roleQuestionInstruction = Anweisung*
+
 #SearchCriteriaSubView
 searchCriteria = Suchkriterien*
 furtherCriteria = Weitere Kriterien*
 addSimpleSearchCriteria= Suchkriterium hinzuf\u00FCgen*
 simpleSearchCriteriaName= Name*
 simpleSearchCriteriaValue= Wert*
+
 #File
 roleFile = Datei*
 filePath= Pfad*
 fileDescription = Beschreibung*
 addRoleFile= Neue Rollendatei*
+
 #RoleScript
 roleScript = Rollenskript*
 selectRoleTemplate = Rollenvorlage ausw\u00E4hlen*
+
 #MajorMinorPopup
 majorLbl=Major Changes*
 minorLbl=Minor Changes*
 
-####Topics & Specification
+#StandardizedRolePrintFilterView
+fileDetail = Dateien
+printFor = Drucken f\u00FCr
+basicData = Stammdaten
+standardizedRole = Simulationsrolle
+optionDetail = Optionsdetails
+roleBaseItemName = Role Base Item Name*
 
+#RoleDetailsActivity
+confirmationMajorSkillAdded = Major skill successfully added!*
+
+####Topics & Specification
 roleTopic = Fachgebiet*
 addDiscipline = Disziplin hinzuf\u00FCgen*
 addRoleTopic = Fachgebiet hinzuf\u00FCgen*
 studyYear = SJ
 studyYears = Studienjahr
 
-####Role Template
+#TopicsAndSpecActivity
+warningAssignedRoleTopic = Disziplin kann nicht gel\u00F6scht werden, da sie ein zugewiesenes Fachgebiet hat!
 
+####Role Template
 addRoleScriptTemplate = Neue Vorlage hinzuf\u00FCgen*
 dateCreated = Erstellt am*
 dateEdited = Zuletzt bearbeitet*
@@ -284,7 +318,6 @@ roleItemName = Titel*
 addRoleSubItem = Unterpunkt hinzuf\u00FCgen*
 
 ####ROOM MATERIALS
-
 roomMaterialType = Objektart
 roomMaterials = Raumausstattung*
 addMaterial = Objekt hinzuf\u00FCgen*
@@ -392,6 +425,13 @@ dataPastDateWarning = Data must not be past date*
 splittingNotAllowWarning=Spliting is not allowed (Day End Time must greater than 13)
 roomAssignedWarning = Raum bereits einem anderen Posten zugewiesen
 pleaseEnterWarning = Bitte einen Wert eingeben f\u00FCr
+confirmationDeleteOsceBluePrintPost = Wollen Sie diesen OSCE-Plan wirklich l\u00F6schen?*
+
+#CircuitDetailsActivity
+updateOsce=OSCE Daten erfolgreich aktualisiert*
+deleteTask=Wollen Sie diese Aufgabe wirklich l\u00F6schen?*
+saveOsceBlueprint=OSCE-Postenvorlage erfolgreich gespeichert.*
+osceDaySuccess=OSCE Tag erfolgreich aktualisiert.*
 
 #Sequence Sub View
 splitSequence = Reihenfolge Trennen
@@ -480,6 +520,7 @@ warningSelectStudent = Bitte mindestens einen Studenten ausw\u00E4hlen!
 warningNoActiveSimPat = Kein aktivierter SimPat vorhanden!
 roleAddManually = SimPats manuell hinzuf\u00FCgen
 roleAddAllActive = Alle aktiven SP hinzuf\u00FCgen
+roleEnterPatientName = Bitte Name eines SimPat eingeben...
 
 #RoleAssignments/OsceDaySubView
 roleOSCESecurityChange = Sind Sie sicher, dass Sie den Sicherheitsstatus \u00E4ndern wollen?
@@ -508,42 +549,44 @@ confirmationAutoAssignmentSuccess = SimPats erfolgreich den Rollen zugewiesen!
 errorAutoAssignmentFailure = SimPats konnten nicht den Rollen zugewiesen werden!
 dmzShowReply = Zeige Nachrichten vom DMZ-Server an
 
-#Assignment E[
-importQuestion = Import Question*
-optionName = Option:*
-optionValue = Value:*
-questionName = Question*
-questionInstruction = Instruction*
-#Assignment E]
-anamnesisForm = Anamneseformular*
+#ImportObjectiveView
+confirmationRecordInserted = Eintrag erfolgreich eingef\u00FCgt
 
-enterSortOrderWarn = Please enter a number abouve 0 .*
-unSaveOrderWarn = Please save order before ,then move this.*
-leavePageWarn = You have not save order , are you sure leave this page ?*
-anamnesisCheckTitle = Text*
-animationTime = 3000
-widthSize = 1225
-widthMin = 705
-deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.*
-
-#MODULE 3 START
-loading = loading...
-enterPatient = Please enter Patient name ...
-# End MODULE 3
-
-updateOsce=OSCE Daten erfolgreich aktualisiert*
-deleteTask=Wollen Sie diese Aufgabe wirklich l\u00F6schen?*
-saveOsceBlueprint=OSCE-Postenvorlage erfolgreich gespeichert.*
-osceDaySuccess=OSCE Tag erfolgreich aktualisiert.*
-
-# Issue : 120
-fileDetail = Files
-printFor = Print for
-basicData = Basic Data
-standardizedRole = Standardized Role
-optionDetail = Option Details
-roleBaseItemName = Role Base Item Name
-# Issue : 120
+#PrintTemplatePopupView
+tplTemplate = Vorlage
+tplLoadTemplate = Vorlage laden
+tplPrintTemplate = Vorlage drucken
+tplRestoreTemplate = Vorlage wiederherstellen
+tplSaveTemplate = Vorlage speichern
+tplVarTitle = [TITLE]
+tplVarName = [NAME]
+tplVarPreName = [PRENAME]
+tplVarDate = [DATE]
+tplVarStartTime = [START TIME]
+tplVarEndTime = [END TIME]
+tplVarOsce = [OSCE]
+tplVarRole = [ROLE]
+tplVarPost = [POST]
+tplVarRoom = [ROOM]
+tplVarLongBreak = [LONG BREAK]
+tplVarLunchBreak = [LUNCH BREAK]
+tplVarTitleSep = [TITLE SEPARATOR]
+tplVarOsceDaySep = [OSCE_DAY SEPARATOR]
+tplVarScheduleSep = [SCHEDULE SEPARATOR]
+tplVarBreakSep = [BREAK SEPARATOR]
+tplVarScriptSep = [SCRIPT SEPARATOR]
+tplDescTitle = Anrede
+tplDescName = Name
+tplDescPreName = Vorname
+tplDescDate = Datum der Pr\u00FCfung
+tplDescStartTime = Beginn der Pr\u00FCfung
+tplDescEndTime = Ende der Pr\u00FCfung
+tplDescOsce = Zugewiesene OSCE
+tplDescRole = Zugewiesene Rolle
+tplDescPost = Zugewiesener Posten
+tplDescRoom = Zugewiesener Raum
+tplDescLongBreak = Lange Pause
+tplDescLunchBreak = Mittagspause
 
 #Module 7
 version=Version
@@ -647,7 +690,6 @@ invalidVideoFileType=Invalid image Video type.
 
 #learning
 appliance=Appliance
-majorSuccess=Main skill added successfully
 minorSuccess=Minor skill added successfully
 addSkill=Add Skill
 specialisation=Specialisation*
