--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -25,7 +25,7 @@ NATIONALITY_LESS = -
 NATIONALITY_MORE = -
 ANAMNESIS_EQUALS = beantwortet mit
 ANAMNESIS_NOT_EQUALS = nicht beantwortet mit
-ANAMNESIS_LESS = Antwort höchstens
+ANAMNESIS_LESS = Antwort h\u00F6chstens
 ANAMNESIS_MORE = Antwort mindestens
 NUMERIC_EQUALS = =
 NUMERIC_NOT_EQUALS = \u2260
@@ -51,16 +51,16 @@ MARITIALSTATUS_NOT_EQUALS = SimPat isn't
 AGE = Age
 GENDER = Gender 
 
-PERPIECE = Pro Stück*
+PERPIECE = Pro St\u00FCck*
 PERDAY = Pro Tag*
 CONSUMABLE = Verbrauchsmaterial*
 EQUIPMENT= Apparatur*
-FORSIMPAT = Für SimPat*
+FORSIMPAT = F\u00FCr SimPat*
 DAY = Tag*
 #By Spec]
 
 #Gender
-MALE = männlich
+MALE = m\u00E4nnlich
 FEMALE = weiblich
 
 #LangSkillLevel
@@ -74,7 +74,7 @@ NATIVE_SPEAKER = Muttersprache
 
 #PossibleFields
 COMMENT = Kommentar
-HEIGHT = Grösse
+HEIGHT = Gr\u00F6sse
 WEIGHT = Gewicht
 BMI = Body-Mass-Index
 SCAR = Narbe
@@ -90,7 +90,7 @@ ASC = aufsteigend
 DESC = absteigend
 
 #TraitTypes
-TATTOO = Tätowierung
+TATTOO = T\u00E4towierung
 NOT_TO_EXAMINE = Nicht untersuchen
 
 #Operation
@@ -126,7 +126,6 @@ table_item=Tabelle*
 rich_text_item=RichText*
 #End
 
-
 notSetHostAddressException = DMZ_HOST_ADDRESS Init Parameter not set
 connectHostAddressException = Unable to connect to host address 
 httpClientException = HTTPException connecting to DMZ host 
@@ -146,8 +145,7 @@ exportSuccessful = Export to DMZ Successful
 serverReturndError = Server Returned Error: 
 importSussessful = Import Successful
 
-#OsceScreenStatus
-
+#OsceStatus
 NEW_STATUS="Osce_New_Status";
 BluePrint_Status="Osce_BluePrint_Status";
 Genrated_Status="Osce_Genrated_Status";
@@ -161,27 +159,23 @@ OSCE_GENRATED = Generierter OSCE*
 OSCE_FIXED = Fixierter OSCE*
 OSCE_CLOSED = Geschlossener OSCE*
 
-#G: SPEC START =
+#Semesters
 HS = HS
 FS = FS
-# G: SPEC START =
-# 5C: SPEC START
+
+#PostType
 NORMAL = Regul\u00E4rer Posten*
 BREAK = Pause*
 ANAMNESIS_THERAPY = Doppelposten*
 PREPARATION = Vorbereitungsposten*
-# 5C: SPEC END
 
-err_DialogBoxTitle = Fehler aufgefordert
-err_DialogBoxCloseButton = schließen
+#OSCESecurityStatus
+SIMPLE = Regul\u00E4re Pr\u00FCfung 
+FEDERAL_EXAM = Staatsexamen
 
-SIMPLE = SIMPLE 
-FEDERAL_EXAM = FEDERAL EXAM
-
-# Module 5 bug Report Change
+#OsceSequences
 OSCE_SEQUENCES_A=A
 OSCE_SEQUENCES_B=B
 OSCE_SEQUENCES_C=C
 OSCE_SEQUENCES_D=D
 OSCE_SEQUENCES_E=E
-# E Module 5 bug Report Change
