--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -146,8 +146,7 @@ exportSuccessful = Export to DMZ Successful
 serverReturndError = Server Returned Error: 
 importSussessful = Import Successful
     
-#OsceScreenStatus
-
+#OsceStatus
 NEW_STATUS="Osce_New_Status";
 BluePrint_Status="Osce_BluePrint_Status";
 Genrated_Status="Osce_Genrated_Status";
@@ -161,28 +160,23 @@ OSCE_GENRATED = Generated OSCE*
 OSCE_FIXED = Frozen OSCE*
 OSCE_CLOSED = Closed OSCE*
 
-#G: SPEC START =
+#Semesters
 HS = HS
 FS = FS
-# G: SPEC START =
-# 5C: SPEC START
+
 # PostType
 NORMAL = Regular Station*
 BREAK= Break*
 ANAMNESIS_THERAPY = Double Station*
 PREPARATION = Preparation Station*
-# 5C: SPEC END
 
-err_DialogBoxTitle = Error prompts
-err_DialogBoxCloseButton = close
+#OSCESecurityStatus
+SIMPLE = Regular exam 
+FEDERAL_EXAM = Federal exam
 
-SIMPLE = SIMPLE 
-FEDERAL_EXAM = FEDERAL EXAM
-
-# Module 5 bug Report Change
+#OsceSequences
 OSCE_SEQUENCES_A=A
 OSCE_SEQUENCES_B=B
 OSCE_SEQUENCES_C=C
 OSCE_SEQUENCES_D=D
 OSCE_SEQUENCES_E=E
-# E Module 5 bug Report Change
