--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -171,6 +171,9 @@ roles = Roles
 topicsAndSpec=Topics & specification*
 roleScriptTemplate = Role script template
 students = Studenten
+warningValidValue = Please enter valid data!
+warningEnterYear = Please enter a year!
+warningEnterSemester = Please enter a semester!
 
 #Exams
 exams = Exams
@@ -198,6 +201,7 @@ addQuestion = Add question
 editQuestion = Edit question
 
 spImageUpload= Image uploaded successfully!
+errorFileUpload = An error occured while uploading the file!
 
 ######################### - ROLE - #########################
 
@@ -206,28 +210,34 @@ spImageUpload= Image uploaded successfully!
 #RoleView
 previousRole = Previous Role*
 homeRole = Home*
+
 #FilterPanel
 roleComplexity = Complexity*
+
 #RoleEditView
 addRole = Add Role*
 editRole = Edit Role*
 newRole = New Role*
 roleActive = Active*
+
 #RoleDetailsView/RoleDetail
 roleDetail = Role Detail*
 roleName = Role designation*
 roleAcronym = Acronym*
 roleType = Role type*
+
 #RoleDetailsView/RoleParticipants
 roleParticipants = Role Participants*
 author = Author
 reviewer = Reviewer
 addAuthor = Add author
 addReviewer = Add reviewer
+
 #RoleDetailsView/Keyword
 keyword = Keyword
 keywords=Keywords*
 addKeyword = Add keyword
+
 #RoleDetailsView/Learning
 learning = Learning*
 majorBtnLbl = Add major*
@@ -236,43 +246,68 @@ mainClassi = Main Classification*
 classiTopic = Classification Topic*
 topicLbl = Topic*
 skillLevel = Skill Level*
+
 #CheckListSubView/CheckList/AddCkeckListTopic
 checkList = Checklist*
 addCheckListTopic = Add CheckList Topic*
 addCheckListQuestion = Add CheckList Question*
 topicDescription = Description*
 checklistTopic = Topic*
+
 #CheckListSubView/CheckList/ImportTopic
 importTopic= Import Topic*
 roleQuestions = Questions
+
+#RoleDetailsChecklistSubViewChecklistTopicItemView
+roleImportQuestion = Import question
+roleOptionName = Option:*
+roleOptionValue = Value:*
+roleQuestionName = Question*
+roleQuestionInstruction = Instruction*
+
 #SearchCriteriaSubView
 searchCriteria = Search criteria*
 furtherCriteria = Further criteria*
 addSimpleSearchCriteria= Add search criterion*
 simpleSearchCriteriaName= Name*
 simpleSearchCriteriaValue= Value*
+
 #File
 roleFile = File*
 filePath= Path*
 fileDescription = Description*
 addRoleFile = Add role file*
+
 #RoleScript
 roleScript = Role script*
 selectRoleTemplate = Select role template*
+
 #MajorMinorPopup
 majorLbl=Major Changes*
 minorLbl=Minor Changes*
 
-####Topics & Specification
+#StandardizedRolePrintFilterView
+fileDetail = Files
+printFor = Print for
+basicData = Master data
+standardizedRole = Standardized role
+optionDetail = Option details
+roleBaseItemName = Role Base Item Name*
 
+#RoleDetailsActivity
+confirmationMajorSkillAdded = Major skill successfully added!
+
+####Topics & Specification
 roleTopic = Specific field*
 addDiscipline = Add discipline*
 addRoleTopic = Add specific field*
 studyYear = SY
 studyYears = Study year
 
-####Role Template
+#TopicsAndSpecActivity
+warningAssignedRoleTopic = Discipline can not be deleted if it has an assigned specific field.
 
+####Role Template
 addRoleScriptTemplate = Add new template*
 dateCreated = Date created*
 dateEdited = Date edited*
@@ -283,7 +318,6 @@ roleItemName = Title*
 addRoleSubItem = Add sub item*
 
 ####ROOM MATERIALS
-
 roomMaterialType = Object type
 roomMaterials = Room facilities*
 addMaterial = Add object*
@@ -391,6 +425,13 @@ dataPastDateWarning = Data must not be past date*
 splittingNotAllowWarning=Spliting is not allowed (Day End Time must greater than 13)
 roomAssignedWarning=Room already assigned to another post
 pleaseEnterWarning = Please enter value for 
+confirmationDeleteOsceBluePrintPost = Do you want to delete this OSCE Blueprint ?.*
+
+#CircuitDetailsActivity
+updateOsce=OSCE Data Updated sucessfully*
+deleteTask=Do you really want to delete this task?*
+saveOsceBlueprint=Osce Post blueprint saved successfully.*
+osceDaySuccess=Osce Day Updated successfully*
 
 #Sequence Sub View
 splitSequence = Split sequence
@@ -479,6 +520,7 @@ warningSelectStudent = Please select at least one student!
 warningNoActiveSimPat = No simpat is activated!
 roleAddManually = Manually add SimPats
 roleAddAllActive = Add all active SPs
+roleEnterPatientName = Please enter a SimPat's name...
 
 #RoleAssignments/OsceDaySubView
 roleOSCESecurityChange = Are you sure you want change the security status?
@@ -507,42 +549,45 @@ confirmationAutoAssignmentSuccess = SimPats successfully assigned to roles!
 errorAutoAssignmentFailure = SimPats could not be assigned to roles!
 dmzShowReply = Show messages received from DMZ-Server
 
-#Assignment E[
-importQuestion = Import Question*
-optionName = Option:*
-optionValue = Value:*
-questionName = Question*
-questionInstruction = Instruction*
-#Assignment E]
-anamnesisForm = Anamneseformular*
 
-enterSortOrderWarn = Please enter a number abouve 0 .*
-unSaveOrderWarn = Please save order before ,then move this.*
-leavePageWarn = You have not save order , are you sure leave this page ?*
-anamnesisCheckTitle = Text*
-animationTime = 3000
-widthSize = 1225
-widthMin = 705
-deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.*
+#ImportObjectiveView
+confirmationRecordInserted = Record inserted successfully
 
-#MODULE 3 START
-loading = loading...
-enterPatient = Please enter Patient name ...
-# End MODULE 3
-
-updateOsce=OSCE Data Updated sucessfully*
-deleteTask=Do you really want to delete this task?*
-saveOsceBlueprint=Osce Post Blueprint Saved Successfully.*
-osceDaySuccess=Osce Day Updated successfully*
-
-# Issue : 120
-fileDetail = Files
-printFor = Print for
-basicData = Basic Data
-standardizedRole = Standardized Role
-optionDetail = Option Details
-roleBaseItemName = Role Base Item Name
-# Issue : 120
+#PrintTemplatePopupView
+tplTemplate = Template
+tplLoadTemplate = Load template
+tplPrintTemplate = Print template
+tplRestoreTemplate = Restore template
+tplSaveTemplate = Save template
+tplVarTitle = [TITLE]
+tplVarName = [NAME]
+tplVarPreName = [PRENAME]
+tplVarDate = [DATE]
+tplVarStartTime = [START TIME]
+tplVarEndTime = [END TIME]
+tplVarOsce = [OSCE]
+tplVarRole = [ROLE]
+tplVarPost = [POST]
+tplVarRoom = [ROOM]
+tplVarLongBreak = [LONG BREAK]
+tplVarLunchBreak = [LUNCH BREAK]
+tplVarTitleSep = [TITLE SEPARATOR]
+tplVarOsceDaySep = [OSCE_DAY SEPARATOR]
+tplVarScheduleSep = [SCHEDULE SEPARATOR]
+tplVarBreakSep = [BREAK SEPARATOR]
+tplVarScriptSep = [SCRIPT SEPARATOR]
+tplDescTitle = Form of address
+tplDescName = Name
+tplDescPreName = Pre name
+tplDescDate = Date of exam
+tplDescStartTime = Time exam starts
+tplDescEndTime = Time exam ends
+tplDescOsce = Assigned OSCE
+tplDescRole = Assigned role
+tplDescPost = Assigned station
+tplDescRoom = Assigned room
+tplDescLongBreak = Long break
+tplDescLunchBreak = Lunch break
 
 #Module 7
 version=Version
@@ -627,7 +672,7 @@ videoUpload=Video Upload
 #Module 5 Bug Report Solution
 schedulePostpone=Schedule Next Day
 scheduleEarlier=Schedule Earlier
-#E Module 5 Bug Report Solution
+#E Module 5 Bug Report SolutionroleOptionValue
 
 #role issue
 optionlbl=Option
@@ -646,7 +691,6 @@ invalidVideoFileType=Invalid image Video type.
 
 #learning
 appliance=Appliance
-majorSuccess=Main skill added successfully
 minorSuccess=Minor skill added successfully
 addSkill=Add Skill
 specialisation=Specialisation*
