Added translations, fixed some

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -136,6 +136,7 @@ yes = Ja
 
 changesDiscarded = Sind Sie sicher? \u00C4nderungen werden nicht gespeichert!
 okBtn = Ok
+error = Fehler
 warning = Warnung
 alert = Alarm
 all = Alle
@@ -166,9 +167,11 @@ doctors = Lecturers
 clinics = Kliniken
 
 #Role
+importeosce=Aus eOSCE importieren
+exportosce=OSCE exportieren*
 role = Rolle
 roles = Rollen
-topicsAndSpec = Themen & Spezifikation*
+topicsAndSpec = Fachgebiete & Spezifikation*
 roleScriptTemplate = Rollenskriptvorlage
 students = Studenten
 warningValidValue = Bitte einen g\u00FCltigen Wert eingeben!
@@ -200,8 +203,19 @@ importObjective = Lernziel importieren
 addQuestion = Frage hinzuf\u00FCgen
 editQuestion = Frage bearbeiten
 
+#FileUploadSubViews
 spImageUpload= Bild erfolgreich hochgeladen!
 errorFileUpload = Fehler beim Hochladen!
+spVideoUpload = Video hochladen
+spFileUploadError = Fehler beim Hochladen der Datei!
+spErrorInvalidImageFileType = Ung\u00FCltiger Bilddateityp!
+spErrorInvalidVideoFileType = Ung\u00FCltiger Videodateityp!
+
+#SPDetailsView
+spActive = Aktiv
+spInactive = Inaktiv
+
+warningFillRequiredFields = Bitte alle Pflichtfelder ausf\u00F6llen!
 
 ######################### - ROLE - #########################
 
@@ -237,25 +251,29 @@ addReviewer = Revisor hinzuf\u00FCgen*
 keyword = Schl\u00FCsselwort
 keywords=Schl\u00FCsselw\u00F6rter*
 addKeyword = Schl\u00FCsselwort hinzuf\u00FCgen*
+enterKeyword=Schl\u00FCsselwort eingeben...
 
 #RoleDetailsView/Learning
-learning = Learning*
-majorBtnLbl = Add major*
-minorBtnLbl = Add minor*
-mainClassi = Main Classification*
-classiTopic = Classification Topic*
-topicLbl = Topic*
-skillLevel = Skill Level*
+learning = Lernen*
+majorBtnLbl = Prim\u00E4rer Skill hinzuf\u00FCgen*
+minorBtnLbl = Sekund\u00E4rer Skill hinzuf\u00FCgen*
+mainClassi = Hauptklassifizierung*
+classiTopic = Klassifizierung Fachgebiet*
+topicLbl = Fachgebiet*
+skillLevel = Skill-Stufe*
+addSkill = Skill hinzuf\u00FCgen
 
 #CheckListSubView/CheckList/AddCkeckListTopic
 checkList = Checkliste*
-addCheckListTopic = Checklistengruppe hinzuf\u00FCgen*
+addCheckListTopic = Abschnitt hinzuf\u00FCgen*
 addCheckListQuestion = Frage hinzuf\u00FCgen*
-topicDescription = Description*
-checklistTopic = Topic*
+topicDescription = Beschreibung*
+checklistTopic = Titel*
+questionNotNull = Frage darf nicht leer sein!
+checklistTopicNotNull = Titel darf nicht leer sein!
 
 #CheckListSubView/CheckList/ImportTopic
-importTopic= Import Topic*
+importTopic = Abschnitt importieren*
 roleQuestions = Fragen
 
 #RoleDetailsChecklistSubViewChecklistTopic/OptionItemView
@@ -264,6 +282,10 @@ roleOptionName = Option:*
 roleOptionValue = Wert:*
 roleQuestionName = Frage*
 roleQuestionInstruction = Anweisung*
+roleOptionLabel = Option
+roleCriteriaLabel = Kriterien
+roleConfirmCriterionDelete= Sind Sie sicher, dass Sie dieses Kriterium l\u00F6schen wollen?
+roleOptionConfirmDelete= Sind Sie sicher, dass Sie diese Option l\u00F6schen wollen?
 
 #SearchCriteriaSubView
 searchCriteria = Suchkriterien*
@@ -277,14 +299,15 @@ roleFile = Datei*
 filePath= Pfad*
 fileDescription = Beschreibung*
 addRoleFile= Neue Rollendatei*
+fileUploadSuccess = Datei erfolgreich hochgeladen*
 
 #RoleScript
 roleScript = Rollenskript*
 selectRoleTemplate = Rollenvorlage ausw\u00E4hlen*
 
 #MajorMinorPopup
-majorLbl=Major Changes*
-minorLbl=Minor Changes*
+majorLbl= Grundlegende \u00C4nderungen*
+minorLbl= Kleinere \u00C4nderungen*
 
 #StandardizedRolePrintFilterView
 fileDetail = Dateien
@@ -295,7 +318,9 @@ optionDetail = Optionsdetails
 roleBaseItemName = Role Base Item Name*
 
 #RoleDetailsActivity
-confirmationMajorSkillAdded = Major skill successfully added!*
+confirmationMajorSkillAdded = Prim\E4rer Skill hinzugef\u00FCgt!*
+confirmationMinorSkillAdded = Sekund\u00E4rer Skill hinzugef\u00FCgt!*
+confirmationDeleteRole = rolle wirklich l\u00F6schen?
 
 ####Topics & Specification
 roleTopic = Fachgebiet*
@@ -345,7 +370,7 @@ osceBreak=Pausen (kurz/mittel/lang)*
 min = min
 addOsce = OSCE hinzuf\u00FCgen
 
-#Manage Osces/Edit view
+#OsceEditView
 editOsce = OSCE bearbeiten
 osceMaxRooms = Maximale Anzahl R\u00E4ume*
 osceIsRepe = Ist Repetition*
@@ -356,6 +381,8 @@ osceLunchBreak = Dauer Mittagspause*
 osceMediumBreak = Dauer mittlere Pause*
 osceForTask = osceForTask*?
 osceVersion = Version
+osceSpStayInPost = SP bleibt bei Posten*
+
 #Manage Osces/Task Subview
 osceAddTask = Aufgabe zu OSCE hinzuf\u00FCgen*
 osceTaskName = Aufgabe
@@ -432,6 +459,10 @@ updateOsce=OSCE Daten erfolgreich aktualisiert*
 deleteTask=Wollen Sie diese Aufgabe wirklich l\u00F6schen?*
 saveOsceBlueprint=OSCE-Postenvorlage erfolgreich gespeichert.*
 osceDaySuccess=OSCE Tag erfolgreich aktualisiert.*
+osceSequence=OSCE Sequenz*:
+schedulePostpone = 1 Tag verschieben
+scheduleEarlier = 1 Tag vorverschieben
+warningRoomUnassigned = Bitte jedem Posten einen Raum zuweisen!
 
 #Sequence Sub View
 splitSequence = Reihenfolge Trennen
@@ -459,7 +490,6 @@ exaPlanStudentFailure = Studenten konnten nicht zugewiesen werden.
 exaPlanStudShort = S
 exaPlanExaShort = E
 exaPlanSpShort = SP
-failure = Ein Fehler ist aufgetreten
 
 warningExaminerTime = Name des Examinators und Schlusszeit d\u00FCrfen nicht leer sein!
 warningExaminer = Das Feld Examinator darf nicht leer sein!
@@ -516,6 +546,8 @@ schedulesPrintStud = Kopien f\u00FCr Studenten drucken
 #IndividualSchedulesDetailsActivity
 warningSelectStudent = Bitte mindestens einen Studenten ausw\u00E4hlen!
 
+##################### - EXAMINATION - ######################
+
 #RoleAssignments/manualStandardizedPatientInSemesterAssignmentPopup
 warningNoActiveSimPat = Kein aktivierter SimPat vorhanden!
 roleAddManually = SimPats manuell hinzuf\u00FCgen
@@ -548,6 +580,7 @@ warningPatientAlreadyAssigned = SimPat ist bereits zugewiesen!
 confirmationAutoAssignmentSuccess = SimPats erfolgreich den Rollen zugewiesen!
 errorAutoAssignmentFailure = SimPats konnten nicht den Rollen zugewiesen werden!
 dmzShowReply = Zeige Nachrichten vom DMZ-Server an
+roleBackupViewHeading = Pause
 
 #ImportObjectiveView
 confirmationRecordInserted = Eintrag erfolgreich eingef\u00FCgt
@@ -588,117 +621,57 @@ tplDescRoom = Zugewiesener Raum
 tplDescLongBreak = Lange Pause
 tplDescLunchBreak = Mittagspause
 
-#Module 7
+##################### - UI PACKAGE - ######################
+
+#DoctorView / BellSchedule
 version=Version
-oscedoc=Osce
-starttimedoc=Start Time
-endtimedoc=End Time
-#moduel 7
+oscedoc=OSCE
+starttimedoc=Startzeit
+endtimedoc=Schlusszeit
 
-# Module 3 : Task : B
-active = Active
-inActive = Inactive
-# Module 3 : Task : B
-
-#modul 3 changes {
-backupViewHeading=Pause
-#modul 3 changes }
-
-# Module 5 bug Report Change
-osceSequence=Osce Sequence :
-# E Module 5 bug Report Change
-
-# End Assignment(Day) D
-
-# Issue Role Module
-enterKeyword=Enter Keyword...*
-
-#Summonings
-error = Error
-noSelection=No Selection
-noDataFound=No Data Found
-
-#eosce
-importeosce=Aus eOSCE importieren
-importBtn=Importieren
-processed=Processed
-unprocessed=Unprocessed
-processedfiles=Processed Files
-unprocessedfiles=Unprocessed Files
-importprocessmsg=Do you want to Delete File After Import?
-eosceerrormsg=Select Atleast One File
-confirmation=Confirmation
-unprocessedmsg=All Processed Files Are Deleted
-fetcherrormsg=Error while Fetching Files From Cloud
-importerror=Error in File Import
-importsuccess=File Imported Succssfully
-processedmsg=All Files Are Processed
-delerror=Error in File Delete
-delsuccess=File Deleted Succssfully
-#eosce
-
-# Module : 15
-bellScheduleUpload = Klingelplan Upload 
-bellScheduleExport = Klingelplan Export
-plusTime = +
-minusTime = -
-bellSchedule = Klingelplan
-moveTime = uhrzeiten verschieben
-minute = minute
-dateHeader = Date
-timeHeader = Time
-toneHeader = Tone
-validateMinute = Please enter minute.
-validatePlusMinus = Please select + or - minute option.
-# Module : 15
+#ImportOSCEView / ImportOSCEActivity
+importBtn = Importieren
+importProcessed = Verarbeitet
+importUnprocessed = Nicht verarbeitet
+confirmationDeleteAfterImport = Sollen die Dateien nach dem Import gel\u00F6scht werden?
+warningImportNoFileSelected = Bitte mindestens eine Datei ausw\u00E4hlen!
+confirmation = Best\u00E4tigung
+importProcessedFilesDeleted = Alle verarbeiteten Dateien wurden gel\u00F6scht.
+errorImportFetch = Fehler beim Laden der Dateien vom eOSCE-Server
+importFileError = Fehler beim Dateiimport
+confirmationImportSuccess = Datei erfolgreich importiert
+importProcessedMsg = Alle Dateien wurden verarbeitet.
+errorImportDelete = Fehler beim L\u00F6schen der Datei.
+confirmationImportDelete = Datei erfolgreich gel\u00E6scht
+importSuccess = Import erfolgreich
 
 #export osce
-exportosce=OSCE exportieren*
-exportprocessed=Exportierte Dateien*
-exportunprocessed=Zu exportierende Dateien*
-exporterror=Fehler in Exportdateien*
-exportprocessederror=Error in fetching processed files*
-exportunprocessederror=Error in fetching unProcessed files*
-exportsuccess=Files put in S3 successfully*
-exportprocessedlabel=All processed files exported*
-exportprocessedmsg=All files processed*
-exportwarning=Selected files are already exported, Do you want to continue?*
+exportProcessed = Exportierte Dateien*
+exportUnprocessed = Zu exportierende Dateien*
+exportError = Fehler beim Export*
+exportFetchProcessedError = Fehler beim Laden der verarbeiteten Dateien*
+exportFetchUnprocessedError = Fehler beim Laden der nicht verarbeiteten Dateien*
+exportSuccess = Dateien erfolgreich in S3 platziert*
+exportProcessedExported = Alle verarbeiteten Dateien exportiert*
+exportAllFilesProcessed = Alle Dateien wurden verarbeitet*
+exportWarningAlreadyExported = Ausgew\u00E4hlte Dateien wurden bereits exportiert. Wollen Sie wirklich fortfahren?*
 
-#nationality issue
-nationaltiywarning=Nationality already exist
-videoUpload=Video Upload
+# BellScheduleView
+bellSchedule = Klingelplan
+bellScheduleUpload = Klingelplan hochladen
+bellScheduleExport = Klingelplan exportieren
+bellSchedPlusTime = +
+bellSchedMinusTime = -
+bellSchedAdjustTime = Uhrzeiten verschieben
+bellSchedMinute = Minute
+bellSchedDateHeader = Datum
+bellSchedTimeHeader = Uhrzeit
+bellSchedToneHeader = Klang
+bellSchedValidateMinute = Bitte Minute eingeben.
+bellSchedValidatePlusMinus = Bitte + / - Minuten eingeben!
 
-#Module 5 Bug Report Solution
-schedulePostpone=Schedule Next Day
-scheduleEarlier=Schedule Earlier
-#E Module 5 Bug Report Solution
+#NationalityActivity
+nationaltiyWarning = Nationalit\u00E4t existiert bereits!
 
-#role issue
-optionlbl=Option
-criterialbl=Criteria
-
-criteriadelete="Are you sure you want to delete this criteria?"
-optiondelete="Are you sure you want to delete this option?"
-
-# SPEC Change
-fileUploadSuccess=File uploaded successfully*
-requiredFields=Please fill all the required fields
-
-fileUploadError=Error in file upload.
-invalidImageFileType=Invalid image file type.
-invalidVideoFileType=Invalid image Video type.
-
-#learning
-appliance=Appliance
-minorSuccess=Minor skill added successfully
-addSkill=Add Skill
-specialisation=Specialisation*
-questionNotNull=Checklist Question Cannot be null
-checklistTopicNotNull=CheckList Topic Cannot be null
-
-headerValueMessage=Please Enter Valid Value For OSCE
-startEndTimeMessage=please enter start time less ten end time
-roomNotNullWarning=Please assign room to each Post
-deleteRole= Do you want to delete Role?
-
-OsceSpStayInPost=SP_Stay_In_Post
+#LearningObjectivView
+lrnObjAppliance = Hilfsmittel
