--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -126,11 +126,11 @@ table_item=Tabelle*
 rich_text_item=RichText*
 #End
 
-notSetHostAddressException = DMZ_HOST_ADDRESS Init Parameter not set
-connectHostAddressException = Unable to connect to host address 
-httpClientException = HTTPException connecting to DMZ host 
-serializingException = Error serializing Patient
-patientNotExistException = Patient does not exist
+notSetHostAddressException = DMZ_HOST_ADDRESS Init Parameter nicht gesetzt
+connectHostAddressException = Kann DMZ-Server nicht finden
+httpClientException = HTTP-Fehler bei der Verbindung zum DMZ-Server
+serializingException = Fehler beim Serialisieren der SimPat-Daten
+patientNotExistException = SimPat existiert nicht
 
 syncStandardizedPatientException = Sync StandardizedPatient failed with error message: 
 syncNationalityException = Sync Nationality failed with error message: 
@@ -139,11 +139,11 @@ syncDescriptionException = Sync Description failed with error message:
 syncBankaccountException = Sync Bankaccount failed with error message: 
 syncAnamnesisFormException = Sync AnamnesisForm failed with error message: 
 syncAnamnesisCheckValuesException = Sync AnamnesisCheckValues failed with error message: 
-runTimeException = Illegal Data
+runTimeException = Ung\u00FCltige Daten!
 
-exportSuccessful = Export to DMZ Successful
-serverReturndError = Server Returned Error: 
-importSussessful = Import Successful
+exportSuccessful = Export zur DMZ erfolgreich!
+serverReturndError = Der Server hat folgenden Fehler zur\u00FCckgegeben: 
+importSussessful = Import erfolgreich
 
 #OsceStatus
 NEW_STATUS="Osce_New_Status";
