--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -127,11 +127,10 @@ rich_text_item=RichText*
 #End
 
 notSetHostAddressException = DMZ_HOST_ADDRESS Init Parameter not set
-connectHostAddressException = Unable to connect to host address 
-httpClientException = HTTPException connecting to DMZ host
-serializingException = Error serializing Patient
-
-patientNotExistException = Patient does not exist
+connectHostAddressException = Unable to find DMZ host
+httpClientException = HTTP-exception connecting to DMZ host.
+serializingException = Error serializing SimPat
+patientNotExistException = SimPat does not exist
 
 syncStandardizedPatientException = Sync StandardizedPatient failed with error message: 
 syncNationalityException = Sync Nationality failed with error message: 
