--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -136,6 +136,7 @@ yes = Yes
 
 changesDiscarded = Are you sure? Changes will be discarded!
 okBtn = Ok
+error = Error
 warning = Warning
 alert = Alert
 all = All
@@ -166,9 +167,11 @@ doctors = Lecturers
 clinics = Clinics
 
 #Role
+importeosce=Import from eOSCE
+exportosce=Export OSCE*
 role = Role
 roles = Roles
-topicsAndSpec=Topics & specification*
+topicsAndSpec = Specific fields & specification*
 roleScriptTemplate = Role script template
 students = Studenten
 warningValidValue = Please enter valid data!
@@ -200,8 +203,19 @@ importObjective = Import Objective
 addQuestion = Add question
 editQuestion = Edit question
 
+#FileUploadSubViews
 spImageUpload= Image uploaded successfully!
 errorFileUpload = An error occured while uploading the file!
+spVideoUpload = Upload video
+spFileUploadError = Error in file upload.
+spErrorInvalidImageFileType = Invalid image file type.
+spErrorInvalidVideoFileType=Invalid video file type.
+
+#SPDetailsView
+spActive = Active
+spInactive = Inactive
+
+warningFillRequiredFields = Please fill all the required fields!
 
 ######################### - ROLE - #########################
 
@@ -237,25 +251,29 @@ addReviewer = Add reviewer
 keyword = Keyword
 keywords=Keywords*
 addKeyword = Add keyword
+enterKeyword=Enter Keyword...
 
 #RoleDetailsView/Learning
 learning = Learning*
-majorBtnLbl = Add major*
-minorBtnLbl = Add minor*
-mainClassi = Main Classification*
-classiTopic = Classification Topic*
-topicLbl = Topic*
-skillLevel = Skill Level*
+majorBtnLbl = Add primary skill*
+minorBtnLbl = Add secondary skill*
+mainClassi = Main classification*
+classiTopic = Classification specific field*
+topicLbl = Specific field*
+skillLevel = Skill level*
+addSkill = Add skill
 
 #CheckListSubView/CheckList/AddCkeckListTopic
 checkList = Checklist*
-addCheckListTopic = Add CheckList Topic*
-addCheckListQuestion = Add CheckList Question*
+addCheckListTopic = Add section*
+addCheckListQuestion = Add question*
 topicDescription = Description*
-checklistTopic = Topic*
+checklistTopic = Titel*
+questionNotNull = Question must not be empty!
+checklistTopicNotNull = Title must not be empty!
 
 #CheckListSubView/CheckList/ImportTopic
-importTopic= Import Topic*
+importTopic= Import section*
 roleQuestions = Questions
 
 #RoleDetailsChecklistSubViewChecklistTopicItemView
@@ -264,6 +282,10 @@ roleOptionName = Option:*
 roleOptionValue = Value:*
 roleQuestionName = Question*
 roleQuestionInstruction = Instruction*
+roleOptionLabel = Option
+roleCriteriaLabel = Criteria
+roleConfirmCriterionDelete = Are you sure you want to delete this criterion?
+roleOptionConfirmDelete= Are you sure you want to delete this option?
 
 #SearchCriteriaSubView
 searchCriteria = Search criteria*
@@ -277,14 +299,15 @@ roleFile = File*
 filePath= Path*
 fileDescription = Description*
 addRoleFile = Add role file*
+fileUploadSuccess=File uploaded successfully*
 
 #RoleScript
 roleScript = Role script*
 selectRoleTemplate = Select role template*
 
 #MajorMinorPopup
-majorLbl=Major Changes*
-minorLbl=Minor Changes*
+majorLbl = Major changes*
+minorLbl = Minor changes*
 
 #StandardizedRolePrintFilterView
 fileDetail = Files
@@ -295,7 +318,9 @@ optionDetail = Option details
 roleBaseItemName = Role Base Item Name*
 
 #RoleDetailsActivity
-confirmationMajorSkillAdded = Major skill successfully added!
+confirmationMajorSkillAdded = Primary skill successfully added!
+confirmationMinorSkillAdded = Secondary skill successfully added!
+confirmationDeleteRole = Do you really want to delete this role?
 
 ####Topics & Specification
 roleTopic = Specific field*
@@ -356,6 +381,7 @@ osceLunchBreak = Lunch break duration*
 osceMediumBreak = Medium break duration*
 osceForTask = osceForTask*?
 osceVersion = Version
+osceSpStayInPost = SP stays at station*
 #Manage Osces/Task Subview
 osceAddTask = Add task to OSCE*
 osceTaskName = Task name
@@ -432,6 +458,10 @@ updateOsce=OSCE Data Updated sucessfully*
 deleteTask=Do you really want to delete this task?*
 saveOsceBlueprint=Osce Post blueprint saved successfully.*
 osceDaySuccess=Osce Day Updated successfully*
+osceSequence=OSCE Sequence*:
+schedulePostpone = Postpone 1 day
+scheduleEarlier = Prepone 1 day
+warningRoomUnassigned = Please assign room to each station
 
 #Sequence Sub View
 splitSequence = Split sequence
@@ -459,7 +489,6 @@ exaPlanStudentFailure = Students could not be assigned.
 exaPlanStudShort = S
 exaPlanExaShort = E
 exaPlanSpShort = SP
-failure = Failure occured
 
 warningExaminerTime = Examiner name and end time may not be empty!
 warningExaminer = Examiner may not be empty!
@@ -516,6 +545,8 @@ schedulesPrintStud = Print copies for students
 #IndividualSchedulesDetailsActivity
 warningSelectStudent = Please select at least one student!
 
+##################### - EXAMINATION - ######################
+
 #RoleAssignments/manualStandardizedPatientInSemesterAssignmentPopup
 warningNoActiveSimPat = No simpat is activated!
 roleAddManually = Manually add SimPats
@@ -548,7 +579,7 @@ warningPatientAlreadyAssigned = SimPat is already assigned!
 confirmationAutoAssignmentSuccess = SimPats successfully assigned to roles!
 errorAutoAssignmentFailure = SimPats could not be assigned to roles!
 dmzShowReply = Show messages received from DMZ-Server
-
+roleBackupViewHeading = Break
 
 #ImportObjectiveView
 confirmationRecordInserted = Record inserted successfully
@@ -589,117 +620,57 @@ tplDescRoom = Assigned room
 tplDescLongBreak = Long break
 tplDescLunchBreak = Lunch break
 
-#Module 7
+##################### - UI PACKAGE - ######################
+
+#DoctorView / BellSchedule
 version=Version
-oscedoc=Osce
+oscedoc=OSCE
 starttimedoc=Start Time
 endtimedoc=End Time
-#moduel 7
 
-# Module 3 : Task : B
-active = Active
-inActive = Inactive
-# Module 3 : Task : B
-
-#modul 3 changes {
-backupViewHeading=Pause
-#modul 3 changes }
-
-# Module 5 bug Report Change
-osceSequence=Osce Sequence :
-# E Module 5 bug Report Change
-
-# End Assignment(Day) D
-
-# Issue Role Module
-enterKeyword=Enter Keyword...*
-
-#Summonings
-error = Error
-noSelection=No Selection
-noDataFound=No Data Found
-
-#eosce
-importeosce=Import from eOSCE
-importBtn=Import
-processed=Processed
-unprocessed=Unprocessed
-processedfiles=Processed Files
-unprocessedfiles=Unprocessed Files
-importprocessmsg=Do you want to Delete File After Import?
-eosceerrormsg=Select Atleast One File
-confirmation=Confirmation
-unprocessedmsg=All Processed Files Are Deleted
-fetcherrormsg=Error while Fetching Files From Cloud
-importerror=Error in File Import
-importsuccess=File Imported Succssfully
-processedmsg=All Files Are Processed
-delerror=Error in File Delete
-delsuccess=File Deleted Succssfully
-#eosce
-
-# Module : 15
-bellScheduleUpload = Bell Schedule Upload 
-bellScheduleExport = Bell Schedule Export
-plusTime = +
-minusTime = -
-bellSchedule = Bell Schedule
-moveTime = Move Time
-minute = minute
-dateHeader = Date
-timeHeader = Time
-toneHeader = Tone
-validateMinute = Please enter minute.
-validatePlusMinus = Please select + or - minute option.
-# Module : 15
+#ImportOSCEView
+importBtn = Import
+importProcessed = Processed
+importUnprocessed = Unprocessed
+confirmationDeleteAfterImport = Do you want to delete the files after import?
+warningImportNoFileSelected = Please select at least one file!
+confirmation = Confirmation
+importProcessedFilesDeleted = All Processed Files Are Deleted
+errorImportFetch = Error fetching files from eOSCE server.
+importFileError = Error importing file.
+confirmationImportSuccess = File succssfully imported 
+importProcessedMsg = All files were processed
+errorImportDelete = Error deleting file
+confirmationImportDelete = File succssfully deleted
+importSuccess = Import successful
 
 #export osce
-exportosce=Export OSCE*
-exportprocessed=Exported files*
-exportunprocessed=Files to be exported*
-exporterror=Error in export files*
-exportprocessederror=Error in fetching processed files*
-exportunprocessederror=Error in fetching unProcessed files*
-exportsuccess=Files put in S3 successfully*
-exportprocessedlabel=All processed files exported*
-exportprocessedmsg=All files processed*
-exportwarning=Selected files are already exported, Do you want to continue?*
+exportProcessed = Exported files*
+exportUnprocessed = Files to be exported*
+exportError = Error exporting files*
+exportFetchProcessedError = Error fetching processed files*
+exportFetchUnprocessedError=Error in fetching unProcessed files*
+exportSuccess = Files S3 successfully placed in S3*
+exportProcessedExported = All processed files were exported*
+exportAllFilesProcessed = All files were processed*
+exportWarningAlreadyExported = Selected files are already exported, Do you want to continue?*
 
-#nationality issue
-nationaltiywarning=Nationality already exist
-videoUpload=Video Upload
+# BellScheduleView
+bellSchedule = Bell Schedule
+bellScheduleUpload = Upload bell schedule
+bellScheduleExport = Export bell schedule
+bellSchedPlusTime = +
+bellSchedMinusTime = -
+bellSchedAdjustTime = Adjust times
+bellSchedMinute = Minute
+bellSchedDateHeader = Date
+bellSchedTimeHeader = Time
+bellSchedToneHeader = Sound
+bellSchedValidateMinute = Please enter a value for minute
+bellSchedValidatePlusMinus = Please enter + / - minutes!
 
-#Module 5 Bug Report Solution
-schedulePostpone=Schedule Next Day
-scheduleEarlier=Schedule Earlier
-#E Module 5 Bug Report SolutionroleOptionValue
+#NationalityActivity
+nationaltiyWarning = Nationality already exists!
 
-#role issue
-optionlbl=Option
-criterialbl=Criteria
-
-criteriadelete="Are you sure you want to delete this criteria?"
-optiondelete="Are you sure you want to delete this option?"
-
-# SPEC Change
-fileUploadSuccess=File uploaded successfully*
-requiredFields=Please fill all the required fields
-
-fileUploadError=Error in file upload.
-invalidImageFileType=Invalid image file type.
-invalidVideoFileType=Invalid image Video type.
-
-#learning
-appliance=Appliance
-minorSuccess=Minor skill added successfully
-addSkill=Add Skill
-specialisation=Specialisation*
-questionNotNull=Checklist Question Cannot be null
-checklistTopicNotNull=CheckList Topic Cannot be null
-
-headerValueMessage=Please Enter Valid Value For OSCE
-startEndTimeMessage=please enter start time less ten end time
-roomNotNullWarning=Please assign room to each Post
-deleteRole= Do you want to delete Role?
-
-OsceSpStayInPost=SP_Stay_In_Post
+#LearningObjectivView
+lrnObjAppliance = Appliance
