Module 5 Parcour Review Bug Fix

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -675,3 +675,5 @@ nationaltiyWarning = Nationalit\u00E4t existiert bereits!
 
 #LearningObjectivView
 lrnObjAppliance = Hilfsmittel
+
+warningStandardizedRoleUnassigned = Please assign role to each station
