--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -674,3 +674,5 @@ nationaltiyWarning = Nationality already exists!
 
 #LearningObjectivView
 lrnObjAppliance = Appliance
+
+warningStandardizedRoleUnassigned = Please assign role to each station
