Role Module change files.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -251,6 +251,7 @@ addReviewer = Revisor hinzuf\u00FCgen*
 keyword = Schl\u00FCsselwort
 keywords=Schl\u00FCsselw\u00F6rter*
 addKeyword = Schl\u00FCsselwort hinzuf\u00FCgen*
+keywordExists=Keyword already exists !
 enterKeyword=Schl\u00FCsselwort eingeben...
 
 #RoleDetailsView/Learning
