--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -251,6 +251,7 @@ addReviewer = Add reviewer
 keyword = Keyword
 keywords=Keywords*
 addKeyword = Add keyword
+keywordExists=Keyword already exists !
 enterKeyword=Enter Keyword...
 
 #RoleDetailsView/Learning
