Role Template Bug resolved

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -678,3 +678,7 @@ nationaltiyWarning = Nationalit\u00E4t existiert bereits!
 lrnObjAppliance = Hilfsmittel
 
 warningStandardizedRoleUnassigned = Please assign role to each station
+accessNotification=Access is all ready assigned
+information=Information
+roleTemplateDeleteWarning=RoleTemplate Can not be deleted as assign in Standardizd role
+roleTemplateDeleteMessage=RoleTemplate Deleted Successfully
