--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -677,3 +677,7 @@ nationaltiyWarning = Nationality already exists!
 lrnObjAppliance = Appliance
 
 warningStandardizedRoleUnassigned = Please assign role to each station
+accessNotification=Access is all ready assigned
+information=Information
+roleTemplateDeleteWarning=RoleTemplate Can not be deleted as assign in Standardizd role
+roleTemplateDeleteMessage=RoleTemplate Deleted Successfully
