--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -682,3 +682,5 @@ accessNotification=Access is all ready assigned
 information=Information
 roleTemplateDeleteWarning=RoleTemplate Can not be deleted as assign in Standardizd role
 roleTemplateDeleteMessage=RoleTemplate Deleted Successfully
+
+csvFileError = File not proceed, it must contain student_id, name and prename field
