--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -683,3 +683,8 @@ roleTemplateDeleteWarning=RoleTemplate Can not be deleted as assign in Standardi
 roleTemplateDeleteMessage=RoleTemplate Deleted Successfully
 
 csvFileError = File not proceed, it must contain student_id, name and prename field
+
+createOsce=Create Osce
+osceAssignments=Osce Assignments
+assignmentsOutput=Assignments Output
+afterTheOsce=After the OSCE
