--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -684,7 +684,8 @@ roleTemplateDeleteWarning=RoleTemplate Can not be deleted as assign in Standardi
 roleTemplateDeleteMessage=RoleTemplate Deleted Successfully
 
 csvFileError = File not proceed, it must contain student_id, name and prename field
-
+statisticsEvaluation=Statistics Evaluation
+statisticsEvaluationPlace=Statistics Evaluation place
 createOsce=Create Osce
 osceAssignments=Osce Assignments
 assignmentsOutput=Assignments Output
