Manage OSCE new created field & role module bug solved.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -689,3 +689,6 @@ createOsce=Create Osce
 osceAssignments=Osce Assignments
 assignmentsOutput=Assignments Output
 afterTheOsce=After the OSCE
+
+osceLunchBreakRequiredFiled=Lunch Break Required Field
+osceLongBreakRequiredFiled=Long Break Required Field
