--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -690,3 +690,6 @@ createOsce=Create Osce
 osceAssignments=Osce Assignments
 assignmentsOutput=Assignments Output
 afterTheOsce=After the OSCE
+
+osceLunchBreakRequiredFiled=Lunch Break Required Field
+osceLongBreakRequiredFiled=Long Break Required Field
